# gcovr-demo

./: CMakeLists.txt  README.md
include/: foonction.h
src/: foonction.cc
test/: CMakeLists.txt  foonction-test.cc
